@@ -27,7 +27,6 @@
 	<style name="Login_Subheading">
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:layout_width">wrap_content</item>
-		<item name="android:text">@string/enterYourRedditCredentialsToContinue</item>
 		<item name="android:textColor">@color/White</item>
 		<item name="android:layout_gravity">center_horizontal</item>
 		<item name="android:layout_marginBottom">10dp</item>
